--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(raytracer)
 
 include_directories(includes)
 
-#find_package (Threads)
+find_package (Threads)
 
 set(CMAKE_CXX_STANDARD 11)
-#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
-SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
+SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
+#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
 
 include(src/transport/CMakeLists.txt)
 include(src/renderer/CMakeLists.txt)
