--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -1,9 +1,9 @@
 list ( APPEND RAY_TRACER_RENDERER_SOURCES 
-		${CMAKE_CURRENT_LIST_DIR}/transport.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_server.cpp
 	)
 	
 list ( APPEND RAY_TRACER_WORKER_SOURCES 
-		${CMAKE_CURRENT_LIST_DIR}/transport.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_client.cpp
 	)
 	
 
