--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -1,6 +1,5 @@
-if (TARGET_NAME STREQUAL renderer)
-	list(APPEND RAY_TRACER_RENDERER_SOURCES
-		${CMAKE_CURRENT_LIST_DIR}/renderer_main.cpp
-	)
-endif(TARGET_NAME STREQUAL renderer)
+list(APPEND RAY_TRACER_RENDERER_SOURCES
+	${CMAKE_CURRENT_LIST_DIR}/renderer_main.cpp
+	${CMAKE_CURRENT_LIST_DIR}/renderer_scheduler.cpp
+)
 
