--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -1,12 +1,18 @@
 list ( APPEND RAY_TRACER_RENDERER_SOURCES 
-		${CMAKE_CURRENT_LIST_DIR}/tcp_server.cpp
 		${CMAKE_CURRENT_LIST_DIR}/transport_mgr.cpp
-		${CMAKE_CURRENT_LIST_DIR}/client.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_server.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_sender.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_receiver.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_connection.cpp
+
 	)
 	
 list ( APPEND RAY_TRACER_WORKER_SOURCES 
-		${CMAKE_CURRENT_LIST_DIR}/tcp_client.cpp
-		${CMAKE_CURRENT_LIST_DIR}/client.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_server.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_connection.cpp
+		${CMAKE_CURRENT_LIST_DIR}/transport_mgr.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_sender.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_receiver.cpp
 	)
 	
 
