--- a/raytracer/CMakeLists.txt
+++ b/raytracer/CMakeLists.txt
@@ -7,13 +7,15 @@ include_directories(src)
 find_package (Threads)
 
 set(CMAKE_CXX_STANDARD 11)
-SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
-#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
+#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
+SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
 
+include(src/framework/CMakeLists.txt)
 include(src/transport/CMakeLists.txt)
 include(src/renderer/CMakeLists.txt)
 include(src/transport/CMakeLists.txt)
 include(src/worker/CMakeLists.txt)
+
 
 set(TARGET_NAME renderer)
 add_executable(renderer ${RAY_TRACER_RENDERER_SOURCES} src/renderer/renderer_main.cpp)
