Sever client now are getting started.

--- a/raytracer/src/worker/CMakeLists.txt
+++ b/raytracer/src/worker/CMakeLists.txt
@@ -1,6 +1,4 @@
-if (TARGET_NAME STREQUAL worker)
-	list(APPEND RAY_TRACER_SOURCES
-		${CMAKE_CURRENT_LIST_DIR}/worker_main.cpp
+list(APPEND RAY_TRACER_WORKER_SOURCES
+	${CMAKE_CURRENT_LIST_DIR}/worker.cpp
 	)
-endif(TARGET_NAME STREQUAL worker)
 
