--- a/raytracer/src/framework/CMakeLists.txt
+++ b/raytracer/src/framework/CMakeLists.txt
@@ -1,9 +1,12 @@
 list(APPEND RAY_TRACER_RENDERER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/messaging_framework.cpp
+	${CMAKE_CURRENT_LIST_DIR}/trace_logger.cpp
 )
 
 list(APPEND RAY_TRACER_WORKER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/messaging_framework.cpp
+	${CMAKE_CURRENT_LIST_DIR}/trace_logger.cpp
+
 )
 
 
