--- a/raytracer/src/transport/CMakeLists.txt
+++ b/raytracer/src/transport/CMakeLists.txt
@@ -1,8 +1,7 @@
 list ( APPEND RAY_TRACER_RENDERER_SOURCES 
 		${CMAKE_CURRENT_LIST_DIR}/transport_mgr.cpp
 		${CMAKE_CURRENT_LIST_DIR}/tcp_io_server.cpp
-		${CMAKE_CURRENT_LIST_DIR}/tcp_io_sender.cpp
-		${CMAKE_CURRENT_LIST_DIR}/tcp_io_receiver.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_send_recv.cpp
 		${CMAKE_CURRENT_LIST_DIR}/tcp_io_connection.cpp
 
 	)
@@ -11,8 +10,7 @@ list ( APPEND RAY_TRACER_WORKER_SOURCES
 		${CMAKE_CURRENT_LIST_DIR}/tcp_io_server.cpp
 		${CMAKE_CURRENT_LIST_DIR}/tcp_io_connection.cpp
 		${CMAKE_CURRENT_LIST_DIR}/transport_mgr.cpp
-		${CMAKE_CURRENT_LIST_DIR}/tcp_io_sender.cpp
-		${CMAKE_CURRENT_LIST_DIR}/tcp_io_receiver.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_send_recv.cpp
 	)
 	
 
