Code cleanup, worker registering with the master

--- a/raytracer/CMakeLists.txt
+++ b/raytracer/CMakeLists.txt
@@ -11,16 +11,16 @@ SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
 
 include(src/framework/CMakeLists.txt)
 include(src/transport/CMakeLists.txt)
-include(src/renderer/CMakeLists.txt)
+include(src/master/CMakeLists.txt)
 include(src/transport/CMakeLists.txt)
 include(src/worker/CMakeLists.txt)
 include(src/wiremsg/CMakeLists.txt)
 
 
 
-set(TARGET_NAME renderer)
-add_executable(renderer ${RAY_TRACER_RENDERER_SOURCES} src/renderer/renderer_main.cpp)
-target_link_libraries (renderer ${CMAKE_THREAD_LIBS_INIT})
+set(TARGET_NAME master)
+add_executable(master ${RAY_TRACER_RENDERER_SOURCES} src/master/master_main.cpp)
+target_link_libraries (master ${CMAKE_THREAD_LIBS_INIT})
 
 set(TARGET_NAME worker)
 add_executable(worker ${RAY_TRACER_WORKER_SOURCES} src/worker/worker_main.cpp)
