--- a/raytracing/src/ray_tracer/CMakeLists.txt
+++ b/raytracing/src/ray_tracer/CMakeLists.txt
@@ -1,3 +1,6 @@
 list(APPEND RAY_TRACER_WORKER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/main.cpp
 )
+list(APPEND RAY_TRACER_MASTER_SOURCES
+	${CMAKE_CURRENT_LIST_DIR}/main.cpp
+)
