--- a/raytracing/CMakeLists.txt
+++ b/raytracing/CMakeLists.txt
@@ -20,8 +20,10 @@ include(src/ray_tracer/CMakeLists.txt)
 
 set(TARGET_NAME master)
 add_executable(master ${RAY_TRACER_MASTER_SOURCES} src/master/master_main.cpp)
+SET_TARGET_PROPERTIES(master PROPERTIES COMPILE_FLAGS "-D__Make_master")
 target_link_libraries (master ${CMAKE_THREAD_LIBS_INIT})
 
 set(TARGET_NAME worker)
 add_executable(worker ${RAY_TRACER_WORKER_SOURCES} src/worker/worker_main.cpp)
+SET_TARGET_PROPERTIES(worker PROPERTIES COMPILE_FLAGS "-D__Make_worker")
 target_link_libraries (worker ${CMAKE_THREAD_LIBS_INIT})
