--- a/raytracing/src/master/CMakeLists.txt
+++ b/raytracing/src/master/CMakeLists.txt
@@ -1,5 +1,6 @@
 list(APPEND RAY_TRACER_MASTER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/master_main.cpp
 	${CMAKE_CURRENT_LIST_DIR}/master_scheduler.cpp
+	${CMAKE_CURRENT_LIST_DIR}/static_schedule_cmd.cpp
 )
 
