-Few more bug fixes in produce pixel. Worker code generalized for any kind of schedule. -Fir shot at client code. Not tested. -Need to add few more things like scene specific schedule Q on master side( required only for dynamic schedule)

--- a/raytracing/CMakeLists.txt
+++ b/raytracing/CMakeLists.txt
@@ -15,7 +15,7 @@ include(src/transport/CMakeLists.txt)
 include(src/worker/CMakeLists.txt)
 include(src/wiremsg/CMakeLists.txt)
 include(src/ray_tracer/CMakeLists.txt)
-
+include(src/client/CMakeLists.txt)
 
 
 set(TARGET_NAME master)
@@ -27,3 +27,9 @@ set(TARGET_NAME worker)
 add_executable(worker ${RAY_TRACER_WORKER_SOURCES} src/worker/worker_main.cpp)
 SET_TARGET_PROPERTIES(worker PROPERTIES COMPILE_FLAGS "-D__Make_worker")
 target_link_libraries (worker ${CMAKE_THREAD_LIBS_INIT})
+
+
+set(TARGET_NAME client)
+add_executable(client ${RAY_TRACER_CLIENT_SOURCES} src/client/client_main.cpp)
+SET_TARGET_PROPERTIES(client PROPERTIES COMPILE_FLAGS "-D__Make_client")
+target_link_libraries (client ${CMAKE_THREAD_LIBS_INIT})
