--- a/raytracing/src/framework/CMakeLists.txt
+++ b/raytracing/src/framework/CMakeLists.txt
@@ -6,7 +6,12 @@ list(APPEND RAY_TRACER_MASTER_SOURCES
 list(APPEND RAY_TRACER_WORKER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/messaging_framework.cpp
 	${CMAKE_CURRENT_LIST_DIR}/trace_logger.cpp
-
 )
+
+list(APPEND RAY_TRACER_CLIENT_SOURCES
+	${CMAKE_CURRENT_LIST_DIR}/messaging_framework.cpp
+	${CMAKE_CURRENT_LIST_DIR}/trace_logger.cpp
+)
+
 
 
