--- a/raytracing/src/ray_tracer/CMakeLists.txt
+++ b/raytracing/src/ray_tracer/CMakeLists.txt
@@ -4,3 +4,6 @@ list(APPEND RAY_TRACER_WORKER_SOURCES
 list(APPEND RAY_TRACER_MASTER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/main.cpp
 )
+list(APPEND RAY_TRACER_CLIENT_SOURCES
+	${CMAKE_CURRENT_LIST_DIR}/main.cpp
+)
