--- a/raytracing/src/transport/CMakeLists.txt
+++ b/raytracing/src/transport/CMakeLists.txt
@@ -13,4 +13,11 @@ list ( APPEND RAY_TRACER_WORKER_SOURCES
 		${CMAKE_CURRENT_LIST_DIR}/tcp_io_send_recv.cpp
 	)
 	
+list ( APPEND RAY_TRACER_CLIENT_SOURCES 
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_server.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_connection.cpp
+		${CMAKE_CURRENT_LIST_DIR}/transport_mgr.cpp
+		${CMAKE_CURRENT_LIST_DIR}/tcp_io_send_recv.cpp
+	)
+	
 
