--- a/raytracing/src/master/CMakeLists.txt
+++ b/raytracing/src/master/CMakeLists.txt
@@ -1,8 +1,8 @@
 list(APPEND RAY_TRACER_MASTER_SOURCES
 	${CMAKE_CURRENT_LIST_DIR}/master_main.cpp
 	${CMAKE_CURRENT_LIST_DIR}/master_scheduler.cpp
-	${CMAKE_CURRENT_LIST_DIR}/scene_scheduler.cpp
+	${CMAKE_CURRENT_LIST_DIR}/scene_scheduler_static.cpp
+	${CMAKE_CURRENT_LIST_DIR}/scene_scheduler_dynamic.cpp
 	${CMAKE_CURRENT_LIST_DIR}/resource_tracker.cpp
-
 )
 
